--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -73,3 +73,18 @@
     display: flex;
     justify-content: space-between;
 }
+
+.card .card-header{
+    justify-content: start;
+}
+
+.navbar-nav-link.active, .navbar-nav-link.show, .navbar-nav-link[aria-expanded=true]{
+    color: #fff !important;
+}
+.fs-table {
+    font-size: 13px;
+}
+
+div:where(.swal2-icon) .swal2-icon-content{
+    font-size: 1em !important;
+}
