--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -88,3 +88,18 @@
 div:where(.swal2-icon) .swal2-icon-content{
     font-size: 1em !important;
 }
+
+
+.spinner-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(219, 234, 254, 0.6);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
