fix login sso + login account

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -103,3 +103,31 @@ div:where(.swal2-icon) .swal2-icon-content{
     align-items: center;
 }
 
+.forget-pass-arrow{
+    position: absolute;
+    top: 18px;
+    left: 18px;
+    font-size: 2em;
+    color: #1376bc;
+}
+
+.btn{
+    position: relative;
+}
+
+.btn-loading{
+    /*position: absolute;*/
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*transform: translate(-50%, -50%);*/
+}
+.animate-spin {
+    animation: spin 1s linear infinite;
+}
+@keyframes spin {
+    to { transform: rotate(360deg); }
+}
+
+.fs-14{
+    font-size: 14px !important;
+}
