--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -131,3 +131,34 @@ div:where(.swal2-icon) .swal2-icon-content{
 .fs-14{
     font-size: 14px !important;
 }
+
+.modal-custom{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1050;
+    background-color: #fff;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+    border-radius: 8px;
+
+}
+.modal-custom .modal-dialog{
+
+}
+.modal-custom .modal-dialog .modal-header{
+    padding: 20px;
+    border-bottom: 1px solid #D1D5DB;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
