--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -162,3 +162,6 @@ input[type=number]::-webkit-outer-spin-button {
 input[type=number] {
     -moz-appearance: textfield;
 }
+.navbar-footer {
+    margin-top: auto;   
+}
